--- a/server/config/config.cfg
+++ b/server/config/config.cfg
@@ -1,1 +1,1 @@
-{"AppCache":false,"ListenPort":11000,"DefaultPage":"Blog/index","HtmlTemplate":{"Message/addMessage":"","User/login":"8dd6bb7329a71449b0a1b292b5999164.html","User/index":"8dd6bb7329a71449b0a1b292b5999164.html"}}
+{"AppCache":false,"ListenPort":11000,"DefaultPage":"Blog/index"}
