--- a/server/config/config.cfg
+++ b/server/config/config.cfg
@@ -1,1 +1,1 @@
-{"AppCache":false,"ListenPort":11000,"DefaultPage":"Blog/index"}
+{"AppCache":false,"ListenPort":11000,"DefaultPage":"Blog/index","HtmlTemplate":{"Blog/index":"c4103f122d27677c9db144cae1394a66.html","_template/message.tpl":"c4103f122d27677c9db144cae1394a66.html"}}
