--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "codelyzer": "~2.0.0",
     "concurrent": "^0.3.2",
     "concurrently": "^3.4.0",
+    "crypto-js": "^3.1.9-1",
     "fibers": "^2.0.0",
     "http2": "^3.3.6",
     "jasmine-core": "~2.5.2",
