--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "concurrent": "^0.3.2",
     "concurrently": "^3.4.0",
     "crypto-js": "^3.1.9-1",
+    "events": "^1.1.1",
     "fibers": "^2.0.0",
     "http2": "^3.3.6",
     "jasmine-core": "~2.5.2",
