添加一些页面

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch-client": "better-npm-run watch-client",
     "dev": "concurrent --kill-others  \"npm run start-dev\" \"npm run watch-client\"",
     "start": "ng serve",
+    "start:dev": "better-npm-run start:dev",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,6 +32,15 @@
         "PORT": 30000,
         "DEVPORT": 30080,
         "APIPORT": 30081
+      }
+    },
+    "start:dev": {
+      "command": "ng serve",
+      "env": {
+        "NODE_PATH": "./src",
+        "NODE_ENV": "development",
+        "PORT": 30000,
+        "APIPORT": 30001
       }
     }
   },
