--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       ],
       "env": {
         "PORT": "30001",
-        "DEVPORT": "30081"
+        "APIPORT": "30081"
       }
     },
     {
