--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "protractor": "~5.1.0",
     "querystringify": "^1.0.0",
     "superagent": "^3.5.2",
+    "svg-captcha": "^1.3.9",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0"
