--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "supervisor": "^0.12.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
