--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "bluebird": "^3.5.3",
     "core-js": "^2.4.1",
     "eslint": "^5.15.2",
     "import-dir": "^0.0.1",
